--- a/output/index.html
+++ b/output/index.html
@@ -423,7 +423,7 @@
     </div>
 </section> -->
 
-<!-- <section class="rsvp text-center" id="rsvp">
+<section class="rsvp text-center" id="rsvp">
 
     <div id="rsvp-modal" class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
@@ -437,14 +437,14 @@
                         <div id="add-to-cal"></div>
                     </div>
                 </div>
-            </div> /.modal-content
-        </div>/.modal-dialog
-    </div> /.modal
+            </div>
+        </div>
+    </div>
 
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h3>What are you waiting for?</h3>
+                <h2>RSVP</h2>
                 <p>We would greatly appreciate if you could RSVP before August 1st, 2024</p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
@@ -479,13 +479,13 @@
                         <div class="col-md-12" id="alert-wrapper"></div>
                     </div>
                     <button class="btn-fill rsvp-btn">
-                        Ready to celebrate!
+                        We'll be there!
                     </button>
                 </form>
             </div>
         </div>
     </div>
-</section> -->
+</section>
 
 <footer>
     <div class="container">
